unpackaged/main/default/objects/Case/fields/Hotfix_1__c.field-meta.xml
<CustomField>
    <fullName>Hotfix_1__c</fullName>
    <label>Hotfix 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>