unpackaged/main/default/objects/Case/fields/Hotfix_2__c.field-meta.xml
<CustomField>
    <fullName>Hotfix_2__c</fullName>
    <label>Hotfix 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>