unpackaged/main/default/objects/Case/fields/New_Activity_2__c.field-meta.xml
<CustomField>
    <fullName>New_Activity_2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New Activity 2</label>
    <type>Checkbox</type>
</CustomField>