unpackaged/main/default/objects/Case/fields/New_Activity__c.field-meta.xml
<CustomField>
    <fullName>New_Activity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New Activity</label>
    <type>Checkbox</type>
</CustomField>