unpackaged/main/default/objects/Case/fields/new_demo_field__c.field-meta.xml
<CustomField>
    <fullName>new_demo_field__c</fullName>
    <label>new-demo-field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>