unpackaged/main/default/objects/Case/fields/new_field_2__c.field-meta.xml
<CustomField>
    <fullName>new_field_2__c</fullName>
    <label>new-field-2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>