unpackaged/main/default/objects/Case/fields/new_field_3__c.field-meta.xml
<CustomField>
    <fullName>new_field_3__c</fullName>
    <label>new-field-3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>