unpackaged/main/default/objects/Case/fields/Test_Logging_field__c.field-meta.xml
<CustomField>
    <fullName>Test_Logging_field__c</fullName>
    <label>Test Logging field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>